fix - ajustes de posicionamento e novos links

--- a/dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html
+++ b/dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html
@@ -64,20 +64,20 @@
                     <h2>1. CONTE COM UMA AJUDINHA DIGITAL</h2>
                     <p>Você sabia que existem vários aplicativos que podem te ajudar a levar uma vida mais organizada e ainda dar aquela forcinha nos estudos? Selecionamos alguns para você:</p>
                     <h3>1.1 ATRACKER</h3>
-                    <p>O ATracker(http://www.wonderapps.se/ATracker/home.html) é um aplicativo que vai te ajudar a organizar a sua rotina para as atividades habituais. 
+                    <p>O <a href="http://www.wonderapps.se/ATracker/home.html">ATracker</a> é um aplicativo que vai te ajudar a organizar a sua rotina para as atividades habituais. 
                             Você tem que estar na faculdade todos os dias? Vai à academia duas vezes por semana? Faxina a casa quantas vezes? Tem que sair para passear com o cachorro? Buscar seu filho(a) na escola? Com o aplicativo, você pode adicionar 05 atividades no modo gratuito e montar a sua rotina do melhor jeito para você! Além disso, ele te dará um relatório em formato de gráfico mostrando quantas horas de atividade você teve e até como seu dia de tarefas foi dividido.
                     </p>
                     <h3>1.2 TRELLO</h3>
-                    <p>Você acumulou muitas atividades? Trabalho de faculdade, provas, metas para bater no trabalho? O Trello (https://trello.com/) vai te ajudar a organizar melhor todas essas responsabilidades. Você pode estabelecer prazos para suas atividades, adicionar uma lista de afazeres e até incluir pessoas que dividem a mesma responsabilidade com você! Facilita muito nos trabalhos em grupo da faculdade! 
+                    <p>Você acumulou muitas atividades? Trabalho de faculdade, provas, metas para bater no trabalho? O <a href="https://trello.com/">Trello</a> vai te ajudar a organizar melhor todas essas responsabilidades. Você pode estabelecer prazos para suas atividades, adicionar uma lista de afazeres e até incluir pessoas que dividem a mesma responsabilidade com você! Facilita muito nos trabalhos em grupo da faculdade! 
                             Organização é o segredo para maior produtividade!
                     </p>
                     <h3>1.3 DUOLINGO</h3>
-                    <p>E aquele sonho de aprender inglês ou outra língua para ter uma chance maior de conseguir aquele emprego bacana? Estudando e trabalhando parece que não sobra tempo, mas o Duolingo (https://pt.duolingo.com/) pode te ajudar a estudar uma nova língua no tempinho que sobra! 
+                    <p>E aquele sonho de aprender inglês ou outra língua para ter uma chance maior de conseguir aquele emprego bacana? Estudando e trabalhando parece que não sobra tempo, mas o <a href="https://pt.duolingo.com/">Duolingo</a> pode te ajudar a estudar uma nova língua no tempinho que sobra! 
                             Você pode interagir com o aplicativo por um curto período de tempo por dia, 15 minutos, por exemplo, e aos poucos ir melhorando seu nível de conhecimento na língua escolhida! Que tal aprender uma nova língua enquanto volta para casa no ônibus?
                     </p>
                     <h2>2. TENHA MOMENTOS DE LAZER SEM CULPA</h2>
                     <p>Ter um tempo para descansar é essencial! Tente organizar sua agenda para ter um momento de descanso que sirva para te reabastecer de energia! Estar com as tarefas organizadas e em dia te ajuda a curtir esse momento sem culpa e reiniciar a sua jornada com mais vontade!</p>
-                    <em>Momentos de lazer ajudam, inclusive, na memorização de conteúdos. Confira <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html">aqui</a>o nosso artigo sobre!</em>
+                    <em>Momentos de lazer ajudam, inclusive, na memorização de conteúdos. Confira <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html">aqui</a> o nosso artigo sobre!</em>
                     <h2>3. TRACE SUAS METAS</h2>
                     <p>Você se lembra qual objetivo de vida te fez encarar essa rotina apertada? Pois é, às vezes a loucura é tanta que até nos esquecemos o que nos impulsionou a encarar tantos desafios! 
                             Por isso, faça uma lista com todos os motivos que você tem para estar se esforçando tanto e trace objetivos, metas claras para um futuro próximo. Exemplo de objetivos: finalizar o semestre da faculdade com médias acima de 8; iniciar pesquisa para tema de TCC até outubro; pesquisar ao menos 04 bibliografias que possam servir ao meu tema de TCC até novembro. 
