fix - alterações na index de css dos cards do blog

--- a/dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html
+++ b/dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html
@@ -114,11 +114,11 @@
                         <h5 class="title-news">Vamos trocar uma ideia?<br /> Entre em contato com a gente!</h5>
                     </div>
                     <div class="news-body">
-                        <form name="newsLateral" action="POST" data-netlify="true">
+                        <form name="newsRocket" action="POST" data-netlify="true">
                             <input name="nome" type="text" placeholder="Nome completo" required>
                             <input name="email" type="email" placeholder="E-mail" required>
                             <input name="mensagem" type="text" placeholder="Mensagem" required>
-                            <button type="submit" onclick="downloadMaterial();">EU QUERO!</button>
+                            <button type="submit">EU QUERO!</button>
                             <!-- <span class="aviso">Ao fornecer o seu e-mail, você concordará em receber conteúdo</span> -->
                         </form>
                     </div>
