--- a/index.html
+++ b/index.html
@@ -84,27 +84,31 @@
     <div class="container news">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-                <div class="card">
-                    <img class="card-img" src="img/dicas para memorizar matéria.jpg" alt="Tumblr noticias">
-                    <div class="card-body">
-                        <h5 class="card-title font-weight-bold">3 dicas para memorizar a matéria da prova</h5>
-                        <p class="card-text">Uma das maiores dificuldades dos estudantes é conseguir memorizar 
-                            toda a matéria ou pelo menos a maior parte dela antes de realizar uma prova...</p>
-                        <span class="font-weight-bold">Marcela Carneiro</span>
-                        <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html" class="more-news">mais</a>
+                <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html"class="link-card">
+                    <div class="card">
+                        <img class="card-img" src="img/dicas para memorizar matéria.jpg" alt="Tumblr noticias">
+                        <div class="card-body">
+                            <h5 class="card-title font-weight-bold">3 dicas para memorizar a matéria da prova</h5>
+                            <p class="card-text">Uma das maiores dificuldades dos estudantes é conseguir memorizar 
+                                toda a matéria ou pelo menos a maior parte dela antes de realizar uma prova...</p>
+                            <span class="font-weight-bold">Marcela Carneiro</span>
+                            <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html" class="more-news">mais</a>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-                <div class="card">
-                    <img class="card-img" src="img/como conciliar trabalho e estudos.jpg" alt="Tumblr noticias">
-                    <div class="card-body">
-                        <h5 class="card-title font-weight-bold">Dicas práticas para conciliar estudo e trabalho</h5>
-                        <p class="card-text">Conciliar estudos e trabalho não é exatamente a coisa mais simples de se fazer. Por isso, separamos algumas dicas para deixar a sua rotina um pouco mais fácil!</p>
-                        <span class="font-weight-bold">Esther Luísa Oliveira</span>
-                        <a href="dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html" class="more-news">mais</a>
+                <a href="dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html" class="link-card">
+                    <div class="card">
+                        <img class="card-img" src="img/como conciliar trabalho e estudos.jpg" alt="Tumblr noticias">
+                        <div class="card-body">
+                            <h5 class="card-title font-weight-bold">Dicas práticas para conciliar estudo e trabalho</h5>
+                            <p class="card-text">Conciliar estudos e trabalho não é exatamente a coisa mais simples de se fazer. Por isso, separamos algumas dicas para deixar a sua rotina um pouco mais fácil!</p>
+                            <span class="font-weight-bold">Esther Luísa Oliveira</span>
+                            <a href="dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html" class="more-news">mais</a>
+                        </div>
                     </div>
-                </div>          
+                </a>        
             </div>
             <!-- Card newsletter -->
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
