--- a/dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html
+++ b/dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html
@@ -118,7 +118,7 @@
                             <input name="nome" type="text" placeholder="Nome completo" required>
                             <input name="email" type="email" placeholder="E-mail" required>
                             <input name="mensagem" type="text" placeholder="Mensagem" required>
-                            <button type="submit">EU QUERO!</button>
+                            <button type="submit">ENVIAR</button>
                             <!-- <span class="aviso">Ao fornecer o seu e-mail, você concordará em receber conteúdo</span> -->
                         </form>
                     </div>
