new - novo banner de leads

--- a/5-dicas-para-ingressar-no-mercado-de-trabalho.html
+++ b/5-dicas-para-ingressar-no-mercado-de-trabalho.html
@@ -35,24 +35,34 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="article">
-                    <img src="img/dicas para memorizar matéria.jpg" alt="Dicas para memorizar matéria">
-                    <h1 class="title-article">3 dicas para memorizar melhor a matéria das provas</h1>
-                    <p>Uma das maiores dificuldades dos estudantes é conseguir memorizar toda a matéria ou pelo menos a maior parte dela antes de realizar uma prova. Isso porque sabemos que, muitas vezes, a matéria é grande e o tempo é curto.</p>
-                    <p>Sendo assim, existem diversos métodos utilizados para facilitar a memorização, como a famosa caneta marca texto, post it, resumos, esquemas e por aí vai. </p>
-                    <em>Mas afinal, qual é a melhor estratégia para lembrar de toda a matéria na hora da prova?</em>
-                    <p>Cada um se adequa melhor a uma forma de memorização. Por exemplo, alguns terão mais facilidade se fizerem mapas mentais, outros preferem escrever diretamente no papel. Vai depender da disposição e adaptação de cada um.</p>
-                    <p>No entanto, o nosso time listou 3 dicas que, independente das estratégias de preferência de cada um, podem ajudar  a memorizar melhor a matéria das provas. Confira abaixo:</p>
-                    <h2>1. Dica dois em um: leia em voz ALTA!</h2>
-                    <p>Ler a matéria em voz alta pode ser um exercício chato e cansativo para muitas pessoas. No entanto, é fundamental e poderá te ajudar bastante! Isso porque você será capaz de realizar dois métodos de memorização ao mesmo tempo: a leitura e a audição.</p>
-                    <p>Além disso, ao realizar essa estratégia, é possível melhorar o foco e a concentração e diminuir a distração, uma vez que ler em voz alta impede, na maioria das vezes, a dispersão dos pensamentos.</p>
-                    <p>Aproveite para ler o nosso artigo sobre como focar melhor nos estudos <a href="#">clicando aqui.</a></p>
-                    <h2>2. Dica dia a dia: associe os conteúdos a fatos vivenciados no dia a dia</h2>
-                    <p>A melhor forma de aprender um conteúdo é associá-lo a algo que já sabemos, uma vez que o cérebro possui maior facilidade em assimilar as informações quando isso ocorre. Sendo assim, procure sempre aplicar a matéria aprendida em alguma situação vivenciada no seu dia a dia. Isso ajudará você, inclusive, a entender o porquê de estar estudando o referido conteúdo.</p>
-                    <h2>3. Dica take a break: descanse...</h2>
-                    <p>Isso mesmo que você leu: descanse! De nada adiantará virar noites e noites tentando memorizar toda a matéria para a prova, realizando esforços constantes e intensos, se você não tiver boas noites de sono e descanso.</p>
-                    <p>É fundamental realizar pausas durante o período de estudo para que o rendimento não seja prejudicado. Sendo assim, quando o seu corpo pedir um descanso ou quando o cérebro não estiver conseguindo absorver mais nada, não force a barra, ok?</p>
-                    <p>Conforme exposto, portanto, pudemos perceber que um dos grandes desafios enfrentados pelos estudantes é memorizar a matéria para as provas. São diversos conteúdos cobrados em um tempo curto de aprendizado, o que preocupa muitos estudantes. </p>
-                    <p>Sendo assim, é essencial investir em métodos práticos e que facilitem a memorização da matéria, de acordo com as preferências e adaptações de cada um.</p>
+                    <img src="img/dicas para ingressar no mercado de trabalho.jpg" alt="Dicas para ingressar no mercado de trabalho">
+                    <h1 class="title-article">5 dicas para ingressar no mercado de trabalho</h1>
+                    <p>O mercado de trabalho está cada vez mais competitivo no Brasil. Você provavelmente já ouviu essa frase, correto? Mas será que conhecendo algumas dicas de como ingressar neste universo, as suas chances aumentam? Confira abaixo!</p>
+                    <h2>1. Ingresse em uma universidade</h2>
+                    <p>A primeira dica, e é a mais importante é: entre em uma universidade e estude muito! O Brasil possui apenas 15,3% da população com ensino superior completo, segundo dados do IBGE. O profissional graduado (em nível superior) ganha em média 140% a mais que um profissional não graduado.</p>
+                    <p> Em um exemplo rápido, um profissional que ganha R$2.000,00 sem estar formado, ganharia R$4.800.00 com o diploma na mão. Além disso, a taxa de desemprego costuma ser 40% inferior para quem é graduado no ensino superior.</p>
+                    <p>Sendo assim, matricule-se em uma faculdade e estude muito!</p>
+                    <h2>2. Faça networking</h2>
+                    <p>Aproveite os amigos, familiares, colegas, parentes distantes e TODAS as pessoas possíveis para fazer networking.</p>
+                    <p>A palavra networking, em inglês, significa: a capacidade de estabelecer uma rede de contatos ou uma conexão com alguém. Essas conexões serão importantíssimas não apenas para o ingresso no mercado de trabalho por meio de uma indicação, mas também para possíveis promoções, mudanças de emprego e principalmente o aumento do conhecimento sobre diversos temas.</p>
+                    <p>O Linkedin pode ser um ótimo parceiro para isso.</p>
+                    <h2>3. Aproveite as oportunidades do mercado</h2>
+                    <p>É muito importante saber o momento correto de aproveitar as oportunidades, pois o mercado de trabalho está em constante transformação. Algumas atividades que antigamente eram muito valorizadas estão sendo substituídas pela máquina.</p>
+                    <p>Em contrapartida, outras tantas profissões atuais não existiam há 10 anos.</p>
+                    <p>Portanto, fique ligado na tendência do mercado de trabalho, mas lembre-se sempre de valorizar algumas características, independentemente do trabalho que você exercerá: comunicação, trabalho em equipe e comprometimento.</p>
+                    <h2>4. Crie um bom currículo</h2>
+                    <p>É primordial que a apresentação da sua vida profissional seja bem feita, pois o currículo é a primeira impressão que um recrutador terá de você. Algumas regras básicas de apresentação são: </p>
+                    <h3>4.1. Apresente todas as informações pessoais de forma clara e evidente (nome completo, idade, telefone, e-mail, endereço);</h3>
+                    <h3>4.2. Seja claro e direto com as áreas de interesse;</h3>
+                    <h3>4.3. Diga apenas a verdade;</h3>
+                    <h3>4.4. Coloque as experiências profissionais e educacionais que sejam relevantes para a vaga.</h3>
+                    <em>Confira mais dicas para ter um currículo diferenciado! Acesse o nosso post sobre o assunto clicando <a href="3-dicas-basicas-para-um-curriculo-diferenciado.html">aqui</a>.</em>
+                    <h2>5. Saiba onde procurar emprego</h2>
+                    <p>Em um cenário brasileiro com 12,3% da população desempregada, não é fácil conseguir um emprego, mesmo tendo as qualificações para isso. Portanto, saber onde procurar o emprego é fundamental. Aqui vão algumas dicas:</p>
+                    <h3>5.1. Cadastre-se no <a href="https://empregabrasil.mte.gov.br/">SINE</a>. Esse órgão do Governo Brasileiro atua em diversas cidades e presta um serviço de informar vagas existentes.</h3>
+                    <h3>5.2. Já falamos sobre a importância do networking e do <a href="https://www.linkedin.com/">LinkedIn</a>, correto? Na plataforma, além de vivenciar troca de experiências, você encontrará diversas vagas de emprego.</h3>
+                    <h3>5.3. E a dica mais importante é: seja cara de pau! Vá até os locais em que gostaria de trabalhar (presencialmente ou virtualmente), converse com os funcionários, peça dicas.</h3>
+                    <p>Lembre-se: sonhar pequeno e sonhar grande dá o mesmo trabalho.</p>
                     <p>Gostou das nossas dicas? Fale com a gente pelo formulário abaixo! Adoramos sugestões, tirar dúvidas ou até mesmo bater um papo :)</p>
                 </div>
             </div>
@@ -60,13 +70,12 @@
             <div class="col-xs-12 col-sm-12 col-md-4">
                 <div class="card-interna">
                     <div class="card-body">
-                            <form name="newsLateral" action="POST" data-netlify="true">
-                                <input name="nome" class="w-100" type="text" placeholder="Nome" required>
-                                <input name="nome" class="w-100" type="text" placeholder="Sobrenome" required>
-                                <input name="email" class="w-100" type="email" placeholder="E-mail" required>
-                                <button type="submit" onclick="downloadMaterial();">EU QUERO!</button>
-                            </form>
-                        </div>
+                        <form name="newsLateral" action="POST" data-netlify="true">
+                            <input name="nome" class="w-100" type="text" placeholder="Nome" required>
+                            <input name="nome" class="w-100" type="text" placeholder="Sobrenome" required>
+                            <input name="email" class="w-100" type="email" placeholder="E-mail" required>
+                            <button type="submit" onclick="downloadMaterial();">EU QUERO!</button>
+                        </form>
                     </div>
                 </div>
             </div>
