fix - alterado imagem incorreta no topo

--- a/3-dicas-basicas-para-um-curriculo-diferenciado.html
+++ b/3-dicas-basicas-para-um-curriculo-diferenciado.html
@@ -35,7 +35,7 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="article">
-                    <img src="img/dicas para ingressar no mercado de trabalho.jpg" alt="Dicas para ingressar no mercado de trabalho">
+                    <img src="img/dicas para ter um currículo diferenciado.png" alt="Dicas para ingressar no mercado de trabalho">
                     <h1 class="title-article">3 DICAS BÁSICAS PARA UM CURRÍCULO DIFERENCIADO</h1>
                     <p>Você já parou parar pensar na importância de se ter um currículo bem elaborado? Se destacar no mercado de trabalho é um dos maiores desafios para os jovens universitários hoje em dia, e um bom currículo, com informações bem dispostas, pode brilhar os olhos de um recrutador e fazer com que você se destaque na multidão.</p>
                     <em>Já leu o nosso artigo com dicas para ingressar no mercado de trabalho? Confira <a href="5-dicas-para-ingressar-no-mercado-de-trabalho.html">aqui</a>!</em>
