new - nova disposição dos elementos na home

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </header>
     </div>
     <!-- Spotlight -->
-    <div class="container spot">  
+    <!-- <div class="container spot">  
         <div class="row">
             <div class="col-md-6">
                 <div class="box-left">
@@ -53,7 +53,7 @@
                 <img src="img/img-slide.png" alt="Imagem Destaque"> 
             </div>  
         </div>            
-    </div>
+    </div> -->
     <!-- Search -->
     <div class="container">
         <div class="row ">
@@ -68,35 +68,66 @@
     <!-- News -->
     <div class="container news">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-                <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html"class="link-card">
-                    <div class="card">
-                        <img class="card-img" src="img/dicas para memorizar matéria.jpg" alt="Tumblr noticias">
-                        <div class="card-body">
-                            <h5 class="card-title font-weight-bold">3 dicas para memorizar a matéria da prova</h5>
-                            <p class="card-text">Uma das maiores dificuldades dos estudantes é conseguir memorizar 
-                                toda a matéria ou pelo menos a maior parte dela antes de realizar uma prova...</p>
-                            <span class="font-weight-bold">Marcela Carneiro</span>
-                            <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html" class="more-news">mais</a>
-                        </div>
+            <div class="col-md-8">
+                <div class="row">
+                    <div class="col-md-6 sm-mt-4">
+                        <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html"class="link-card">
+                            <div class="card">
+                                <img class="card-img" src="img/dicas para memorizar matéria.jpg" alt="Tumblr noticias">
+                                <div class="card-body">
+                                    <h5 class="card-title font-weight-bold">3 dicas para memorizar a matéria da prova</h5>
+                                    <p class="card-text">Uma das maiores dificuldades dos estudantes é conseguir memorizar 
+                                        toda a matéria ou pelo menos a maior parte dela antes de realizar uma prova...</p>
+                                    <span class="font-weight-bold">Marcela Carneiro</span>
+                                    <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html" class="more-news">mais</a>
+                                </div>
+                            </div>
+                        </a>
                     </div>
-                </a>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-                <a href="dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html" class="link-card">
-                    <div class="card">
-                        <img class="card-img" src="img/como conciliar trabalho e estudos.jpg" alt="Tumblr noticias">
-                        <div class="card-body">
-                            <h5 class="card-title font-weight-bold">Dicas práticas para conciliar estudo e trabalho</h5>
-                            <p class="card-text">Conciliar estudos e trabalho não é exatamente a coisa mais simples de se fazer. Por isso, separamos algumas dicas para deixar a sua rotina um pouco mais fácil!</p>
-                            <span class="font-weight-bold">Esther Luísa Oliveira</span>
-                            <a href="dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html" class="more-news">mais</a>
-                        </div>
+                    <div class="col-md-6 sm-mt-4">
+                        <a href="dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html" class="link-card">
+                            <div class="card">
+                                <img class="card-img" src="img/como conciliar trabalho e estudos.jpg" alt="Tumblr noticias">
+                                <div class="card-body">
+                                    <h5 class="card-title font-weight-bold">Dicas práticas para conciliar estudo e trabalho</h5>
+                                    <p class="card-text">Conciliar estudos e trabalho não é exatamente a coisa mais simples de se fazer. Por isso, separamos algumas dicas para deixar a sua rotina um pouco mais fácil!</p>
+                                    <span class="font-weight-bold">Esther Luísa Oliveira</span>
+                                    <a href="dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html" class="more-news">mais</a>
+                                </div>
+                            </div>
+                        </a>        
                     </div>
-                </a>        
+                </div>
+                <div class="row">
+                    <div class="col-md-6 mt-4">
+                        <a href="5-dicas-para-ingressar-no-mercado-de-trabalho.html" class="link-card">
+                            <div class="card">
+                                <img class="card-img" src="img/dicas para ingressar no mercado de trabalho.jpg" alt="Tumblr noticias">
+                                <div class="card-body">
+                                    <h5 class="card-title font-weight-bold">5 dicas para ingressar no mercado de trabalho</h5>
+                                    <p class="card-text">O mercado de trabalho está cada vez mais competitivo no Brasil. Você provavelmente já ouviu essa frase, correto? Confira!</p>
+                                    <span class="font-weight-bold">Lucas Silva</span>
+                                    <a href="5-dicas-para-ingressar-no-mercado-de-trabalho.html" class="more-news">mais</a>
+                                </div>
+                            </div>
+                        </a>        
+                    </div>
+                    <div class="col-md-6 mt-4">
+                        <a href="3-dicas-basicas-para-um-curriculo-diferenciado.html" class="link-card">
+                            <div class="card">
+                                <img class="card-img" src="img/dicas para ter um currículo diferenciado.png" alt="Tumblr noticias">
+                                <div class="card-body">
+                                    <h5 class="card-title font-weight-bold">3 Dicas básicas para um currículo diferenciado</h5>
+                                    <p class="card-text">Você já parou parar pensar na importância de se ter um currículo bem elaborado? Se destacar no mercado de trabalho é um dos maiores desafios para os jovens...</p>
+                                    <span class="font-weight-bold">Fernanda Bicalho</span>
+                                    <a href="3-dicas-basicas-para-um-curriculo-diferenciado.html" class="more-news">mais</a>
+                                </div>
+                            </div>
+                        </a>        
+                    </div>  
+                </div>
             </div>
-            <!-- Card newsletter -->
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 justify-content-right">
+            <div class="col-md-4">
                 <div class="card-news">
                     <div class="card-body">
                         <form name="newsLateral" action="POST" data-netlify="true">
@@ -109,37 +140,6 @@
                 </div>
             </div>
         </div>
-        <!-- More news -->
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 mt-4">
-                <a href="5-dicas-para-ingressar-no-mercado-de-trabalho.html" class="link-card">
-                    <div class="card">
-                        <img class="card-img" src="img/dicas para ingressar no mercado de trabalho.jpg" alt="Tumblr noticias">
-                        <div class="card-body">
-                            <h5 class="card-title font-weight-bold">5 dicas para ingressar no mercado de trabalho</h5>
-                            <p class="card-text">O mercado de trabalho está cada vez mais competitivo no Brasil. Você provavelmente já ouviu essa frase, correto? Confira!</p>
-                            <span class="font-weight-bold">Lucas Silva</span>
-                            <a href="5-dicas-para-ingressar-no-mercado-de-trabalho.html" class="more-news">mais</a>
-                        </div>
-                    </div>
-                </a>        
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 mt-4">
-                <a href="3-dicas-basicas-para-um-curriculo-diferenciado.html" class="link-card">
-                    <div class="card">
-                        <img class="card-img" src="img/dicas para ter um currículo diferenciado.png" alt="Tumblr noticias">
-                        <div class="card-body">
-                            <h5 class="card-title font-weight-bold">3 Dicas básicas para um currículo diferenciado</h5>
-                            <p class="card-text">Você já parou parar pensar na importância de se ter um currículo bem elaborado? Se destacar no mercado de trabalho é um dos maiores desafios para os jovens...</p>
-                            <span class="font-weight-bold">Fernanda Bicalho</span>
-                            <a href="3-dicas-basicas-para-um-curriculo-diferenciado.html" class="more-news">mais</a>
-                        </div>
-                    </div>
-                </a>        
-            </div>  
-        </div>
-
-
     </div>
     <!-- Pagination -->
     <!-- <div class="container d-flex justify-content-center">
